--- a/Exericise_08/Base.lproj/first.storyboard
+++ b/Exericise_08/Base.lproj/first.storyboard
@@ -10,7 +10,7 @@
         <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="SliderViewController" customModule="Exericise_08" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Exericise_08" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -30,7 +30,7 @@
                                     <constraint firstAttribute="height" constant="29" id="LAo-sW-sKx"/>
                                 </constraints>
                                 <connections>
-                                    <action selector="changeTheSliderValue:" destination="BYZ-38-t0r" eventType="valueChanged" id="sFC-Ql-UgT"/>
+                                    <action selector="changeTheSliderValue:" destination="BYZ-38-t0r" eventType="valueChanged" id="zu3-N5-8ea"/>
                                 </connections>
                             </slider>
                         </subviews>
@@ -47,8 +47,8 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="4hq-K2-ZVJ"/>
                     <connections>
-                        <outlet property="sliderOutlet" destination="Orx-tw-Fxf" id="69i-Zt-g7F"/>
-                        <outlet property="sliderValLabel" destination="VgQ-9z-Gku" id="DIp-pI-N5J"/>
+                        <outlet property="sliderOutlet" destination="Orx-tw-Fxf" id="wfb-mB-uvB"/>
+                        <outlet property="sliderValLabel" destination="VgQ-9z-Gku" id="PSo-N9-YxY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
