--- a/Exericise_08/Base.lproj/first.storyboard
+++ b/Exericise_08/Base.lproj/first.storyboard
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,11 +11,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Exericise_08" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VgQ-9z-Gku">
-                                <rect key="frame" x="106" y="69" width="201" height="40"/>
+                                <rect key="frame" x="106" y="25" width="387" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="85D-ct-Wrd"/>
                                 </constraints>
@@ -25,7 +24,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.90000000000000002" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Orx-tw-Fxf">
-                                <rect key="frame" x="18" y="166" width="378" height="30"/>
+                                <rect key="frame" x="18" y="122" width="564" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="LAo-sW-sKx"/>
                                 </constraints>
@@ -47,7 +46,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="4hq-K2-ZVJ"/>
                     <connections>
-                        <outlet property="sliderOutlet" destination="Orx-tw-Fxf" id="wfb-mB-uvB"/>
+                        <outlet property="slider" destination="Orx-tw-Fxf" id="wfb-mB-uvB"/>
                         <outlet property="sliderValLabel" destination="VgQ-9z-Gku" id="PSo-N9-YxY"/>
                     </connections>
                 </viewController>
