--- a/Exericise_08/View/Storyboard/second.storyboard
+++ b/Exericise_08/View/Storyboard/second.storyboard
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,11 +11,11 @@
             <objects>
                 <viewController storyboardIdentifier="second" id="kRb-To-7IG" customClass="SecondViewController" customModule="Exericise_08" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VH6-Xh-aae">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ex9-FS-QqS">
-                                <rect key="frame" x="106" y="73" width="201" height="40"/>
+                                <rect key="frame" x="106" y="29" width="387" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="GDf-Ok-aWR"/>
                                 </constraints>
@@ -25,7 +24,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="MvF-tm-em6">
-                                <rect key="frame" x="18" y="170" width="378" height="30"/>
+                                <rect key="frame" x="18" y="126" width="564" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="LUs-Xp-eLY"/>
                                 </constraints>
@@ -47,7 +46,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="CRP-HS-xXw"/>
                     <connections>
-                        <outlet property="sliderOutlet" destination="MvF-tm-em6" id="kNo-PN-C86"/>
+                        <outlet property="slider" destination="MvF-tm-em6" id="kNo-PN-C86"/>
                         <outlet property="sliderValLabel" destination="ex9-FS-QqS" id="mth-sO-q8y"/>
                     </connections>
                 </viewController>
